[package]
name = "tauri-plugin-config-manager"
version = "0.1.0"
authors = ["Joaquin (Pato) Decima <jdecima@vasak.net.ar>", "Vasak Group"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-config-manager"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
tokio = "1.45.1"
serde_json = "1.0.140"
dirs-next = "2.0.0"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
