[package]
name = "tauri-plugin-config-manager"
version = "2.0.1"
authors = ["Joaquin (Pato) Decima <jdecima@vasak.net.ar>", "Vasak Group"]
description = "A Tauri plugin for managing configuration for Vasak applications."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-config-manager"
license = "GPL-3.0-or-later"
repository = "https://github.com/Vasak-OS/tauri-plugin-config-manager"
readme = "README.md"
keywords = ["tauri", "plugin", "config", "configuration", "manager"]

[dependencies]
tauri = { version = "2.5" }
serde = "1.0"
thiserror = "2"
tokio = "1.45.1"
serde_json = "1.0.140"
dirs-next = "2.0.0"
notify = "8.0.0"

[build-dependencies]
tauri-plugin = { version = "2.3", features = ["build"] }
