[package]
name = "tauri-plugin-config-manager"
version = "2.0.4"
authors = ["Joaquin (Pato) Decima <jdecima@vasak.net.ar>", "Vasak Group"]
description = "A Tauri plugin for managing configuration for Vasak applications."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-config-manager"
license = "GPL-3.0-or-later"
repository = "https://github.com/Vasak-OS/tauri-plugin-config-manager"
readme = "README.md"
keywords = ["tauri", "plugin", "config", "configuration", "manager"]

[dependencies]
tauri = { version = "2" }
serde = "1"
thiserror = "2"
tokio = "1"
serde_json = "1"
dirs-next = "2"
notify = "8"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
